fixed results tests