@@ -6,7 +6,6 @@ import co.unruly.control.pair.Comprehensions;
 import co.unruly.control.pair.Pair;
 import org.hamcrest.core.Is;
 import org.junit.Test;
-import org.mockito.Mock;
 
 import java.util.List;
 import java.util.Map;
@@ -33,7 +32,7 @@ import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
 import static org.mockito.Mockito.*;
 
-
+@SuppressWarnings("unchecked")
 public class ResultsTest {
 
     @Test
@@ -63,13 +62,11 @@ public class ResultsTest {
         assertEquals(failString, "i blew up");
     }
 
-    @Mock
-    private Consumer<Integer> successCallback;
-    @Mock
-    private Consumer<String> failureCallback;
-    
     @Test
     public void canDoSideEffectsOnCorrectSideForSuccess() {
+        final Consumer<Integer> successCallback = (Consumer<Integer>) mock(Consumer.class);
+        final Consumer<String> failureCallback = (Consumer<String>) mock(Consumer.class);
+
         Result<Integer, String> success = success(5);
 
         success
@@ -82,6 +79,8 @@ public class ResultsTest {
 
     @Test
     public void canDoSideEffectsOnCorrectSideForFailure() {
+        final Consumer<Integer> successCallback = (Consumer<Integer>) mock(Consumer.class);
+        final Consumer<String> failureCallback = (Consumer<String>) mock(Consumer.class);
 
         Result<Integer, String> failure = failure("oops");
         ConsumableFunction<Result<Integer, String>> failureDo = onFailureDo(failureCallback);
@@ -103,9 +102,9 @@ public class ResultsTest {
         final Result<Integer, String> failure = failure("Cannot parse number");
 
 
-        assertEquals(six.then(attempt(halve)), isSuccessOf(3));
-        assertEquals(five.then(attempt(halve)), isFailureOf("Cannot halve an odd number into an integer"));
-        assertEquals(failure.then(attempt(halve)), isFailureOf("Cannot parse number"));
+        assertTrue(isSuccessOf(3).matches(six.then(attempt(halve))));
+        assertTrue(isFailureOf("Cannot halve an odd number into an integer").matches(five.then(attempt(halve))));
+        assertTrue(isFailureOf("Cannot parse number").matches(failure.then(attempt(halve))));
     }
 
     @Test
@@ -116,8 +115,8 @@ public class ResultsTest {
         final Result<Integer, String> twelve = six.then(onSuccess(x -> x * 2));
         final Result<Integer, String> stillFailure = failure.then(onSuccess(x -> x * 2));
 
-        assertEquals(twelve, isSuccessOf(12));
-        assertEquals(stillFailure, is(failure));
+        assertTrue(isSuccessOf(12).matches(twelve));
+        assertTrue(is(failure).matches(stillFailure));
     }
 
     @Test
@@ -128,8 +127,8 @@ public class ResultsTest {
         final Result<Integer, String> stillSix = six.then(onFailure(String::toLowerCase));
         final Result<Integer, String> lowerCaseFailure = failure.then(onFailure(String::toLowerCase));
 
-        assertEquals(stillSix, Is.is(success(6)));
-        assertEquals(lowerCaseFailure, Is.is(failure("cannot parse number")));
+        assertTrue(Is.is(success(6)).matches(stillSix));
+        assertTrue(Is.is(failure("cannot parse number")).matches(lowerCaseFailure));
     }
 
     @Test
@@ -140,8 +139,8 @@ public class ResultsTest {
         Result<Long, String> parsedSix = six.then(onSuccessTry(Long::parseLong, Exception::toString));
         Result<Long, String> parsedNaN = notANumber.then(onSuccessTry(Long::parseLong, Exception::toString));
 
-        assertEquals(parsedSix, Is.is(success(6L)));
-        assertEquals(parsedNaN, Is.is(failure("java.lang.NumberFormatException: For input string: \"NaN\"")));
+        assertTrue(Is.is(success(6L)).matches(parsedSix));
+        assertTrue(Is.is(failure("java.lang.NumberFormatException: For input string: \"NaN\"")).matches(parsedNaN));
     }
 
     @Test
@@ -151,7 +150,7 @@ public class ResultsTest {
         Stream<Integer> resultStream = results.flatMap(successes());
         List<Integer> successes = resultStream.collect(toList());
 
-        assertEquals(successes, hasItems(6, 5));
+        assertTrue(hasItems(6, 5).matches(successes));
     }
 
     @Test
@@ -162,19 +161,19 @@ public class ResultsTest {
         Result<Integer, String> oddFive = Result.failure("Five is odd");
         Result<Integer, String> oddSeven = Result.failure("Seven is odd");
 
-        assertEquals(evenSix.then(combineWith(evenTwo)).using((x, y) -> x * y), isSuccessOf(12));
-        assertEquals(evenSix.then(combineWith(oddSeven)).using((x, y) -> x * y), isFailureOf("Seven is odd"));
-        assertEquals(oddFive.then(combineWith(evenTwo)).using((x, y) -> x * y), isFailureOf("Five is odd"));
-        assertEquals(oddFive.then(combineWith(oddSeven)).using((x, y) -> x * y), isFailureOf("Five is odd"));
+        assertTrue(isSuccessOf(12).matches(evenSix.then(combineWith(evenTwo)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Seven is odd").matches(evenSix.then(combineWith(oddSeven)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Five is odd").matches(oddFive.then(combineWith(evenTwo)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Five is odd").matches(oddFive.then(combineWith(oddSeven)).using((x, y) -> x * y)));
     }
 
     @Test
     public void canStreamFailures() {
         Stream<Result<Integer, String>> results = Stream.of(success(6), success(5), failure("darnit"));
 
-        List<String> failures = results.flatMap(failures()).collect(toList());
+        List<String> failures = results.flatMap(failures()).toList();
 
-        assertEquals(failures, hasItems("darnit"));
+        assertTrue(failures.contains("darnit"));
     }
 
     @Test
@@ -182,9 +181,10 @@ public class ResultsTest {
         Map<String, Integer> frenchNumberNames = mapOf(entry("un", 1), entry("deux", 2), entry("trois", 3));
 
         Function<String, Result<Integer, String>> extractor = fromMap(frenchNumberNames, word -> String.format("%s is not a french number", word));
-
-        assertEquals(extractor.apply("deux"), isSuccessOf(2));
-        assertEquals(extractor.apply("quattro"), isFailureOf("quattro is not a french number"));
+        var outcome = extractor.apply("deux");
+        var successOfTwo = isSuccessOf(2);
+        assertTrue(successOfTwo.matches(outcome));
+        assertTrue(isFailureOf("quattro is not a french number").matches(extractor.apply("quattro")));
     }
 
     @Test
@@ -192,7 +192,7 @@ public class ResultsTest {
         List<Result<Integer, String>> results = asList(success(1), success(42), success(69));
         Result<List<Integer>, List<String>> unwrapped = Lists.successesOrFailures(results);
 
-        assertEquals(unwrapped, isSuccessOf(asList(1, 42, 69)));
+        assertTrue(isSuccessOf(asList(1, 42, 69)).matches(unwrapped));
     }
 
     @Test
@@ -200,7 +200,7 @@ public class ResultsTest {
         List<Result<Integer, String>> results = asList(success(1), failure("cheese"), success(69), failure("hotdog"));
         Result<List<Integer>, List<String>> unwrapped = Lists.successesOrFailures(results);
 
-        assertEquals(unwrapped, isFailureOf(asList("cheese", "hotdog")));
+        assertTrue(isFailureOf(asList("cheese", "hotdog")).matches(unwrapped));
     }
 
     @Test
@@ -216,7 +216,7 @@ public class ResultsTest {
             .flatMap(successes())
             .collect(toList());
 
-        assertEquals(halvedNumbers, hasItems(3L));
+        assertTrue(hasItems(3L).matches(halvedNumbers));
 
         verify(failureCallback).accept("java.lang.NumberFormatException: For input string: \"NaN\"");
         verify(failureCallback).accept("5 is odd");
@@ -232,8 +232,8 @@ public class ResultsTest {
                 .map(attempt(x -> x % 2 == 0 ? success(x / 2) : failure(x + " is odd")))
                 .collect(split());
 
-        assertEquals(halvedNumbers.left, hasItems(3L));
-        assertEquals(halvedNumbers.right, hasItems("java.lang.NumberFormatException: For input string: \"NaN\"", "5 is odd"));
+        assertTrue(hasItems(3L).matches(halvedNumbers.left));
+        assertTrue(hasItems("java.lang.NumberFormatException: For input string: \"NaN\"", "5 is odd").matches(halvedNumbers.right));
     }
 
     @Test
@@ -245,7 +245,7 @@ public class ResultsTest {
             )
             .then(ifAllSucceeded((x, y) -> x + " = " + y));
 
-        assertEquals(actualResult, isSuccessOf("Yay! = 123"));
+        assertTrue(isSuccessOf("Yay! = 123").matches(actualResult));
     }
 
     @Test
@@ -255,7 +255,7 @@ public class ResultsTest {
             failure("No!")
         ).then(ifAllSucceeded((x, y) -> x + " = " + y));
 
-        assertEquals(result, isFailureOf("No!"));
+        assertTrue(isFailureOf("No!").matches(result));
     }
 
     @Test
@@ -266,7 +266,7 @@ public class ResultsTest {
             success("boo")
         ).then(ifAllSucceeded((x, y, z) -> x + " " + y + " " + z));
 
-        assertEquals(song, isSuccessOf("bibbidy bobbidy boo"));
+        assertTrue(isSuccessOf("bibbidy bobbidy boo").matches(song));
     }
 
     @Test
@@ -277,7 +277,7 @@ public class ResultsTest {
             failure("nooo")
         ).then(ifAllSucceeded((x, y, z) -> x + " " + y + " " + z));
 
-        assertEquals(uhoh, isFailureOf("no"));
+        assertTrue(isFailureOf("no").matches(uhoh));
     }
 
     @Test
@@ -289,7 +289,7 @@ public class ResultsTest {
             success("YesYesYesYes")
         ).then(ifAllSucceeded((a, b, c, d) -> a + b + c + d));
 
-        assertEquals(result, isSuccessOf("YesYesYesYesYesYesYesYesYesYes"));
+        assertTrue(isSuccessOf("YesYesYesYesYesYesYesYesYesYes").matches(result));
     }
 
     @Test
@@ -301,6 +301,6 @@ public class ResultsTest {
             failure("NoNo") // There's no limit
         ).then(ifAllSucceeded((a, b, c, d) -> a + b + c + d));
 
-        assertEquals(result, isFailureOf("NoNo"));
+        assertTrue(isFailureOf("NoNo").matches(result));
     }
 }
